align fixes and new labels/inputs

--- a/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
+++ b/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
@@ -4,9 +4,5 @@
 
 #checkout-step-payment .form-list #radiogroup-container label { display:block; float:none; margin-bottom:2px; }
 #checkout-step-payment .form-list #radiogroup-container label img { height:15px; width:auto; margin-top:1px; }
-#checkout-step-payment .form-list .field { float:none; }
-#checkout-step-payment .form-list .field-set input.input-text { width:168px; margin-left:3px; }
-#checkout-step-payment .form-list .field-set input.l-name { margin:8px 0 0 86px !important; }
 
-#payment_form_buckaroo3extended_paymentguarantee .field-set select { float:left; }
-#payment_form_buckaroo3extended_paymentguarantee .field-set .disabled { display:block; float:left; margin-left:5px; width:190px; }
+#checkout-step-payment .form-list .input-box .disabled { display:inline-block; vertical-align:top; margin-left:5px; width:172px; }
